Fix chromium location nginx

--- a/install/etc/nginx/sites.available/invoiceninja.conf
+++ b/install/etc/nginx/sites.available/invoiceninja.conf
@@ -13,7 +13,7 @@ server {
     	try_files $uri =404;
     	fastcgi_split_path_info ^(.+\.php)(/.+)$;
     	fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param SNAPPDF_EXECUTABLE_PATH '/usr/bin/chromium';
+        fastcgi_param SNAPPDF_EXECUTABLE_PATH '/usr/bin/chromium-browser';
         fastcgi_index index.php;
     	include fastcgi_params;
   }
