--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -5,11 +5,14 @@ name: manual
 on:
   workflow_dispatch:
     inputs:
-      Manual Build:
+      Manual:
         description: 'Manual Build'
         required: false
 jobs:
-  docker:
+  build:
+    env:
+      PHP_VERSION: "8.1"
+      DISTRO: "alpine"
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -84,7 +87,7 @@ jobs:
             sed -i "/FROM .*/a LABEL tiredofit.image.git_repository=\"https://github.com/${GITHUB_REPOSITORY}\"" Dockerfile
             sed -i "/FROM .*/a LABEL tiredofit.image.git_commit=\"${GITHUB_SHA}\"" Dockerfile
             sed -i "/FROM .*/a LABEL tiredofit.image.git_committed_by=\"${GITHUB_ACTOR}\"" Dockerfile
-            sed -i "/FROM .*/a LABEL tiredofit.image_build_date=\"$(date +'%Y-%m-%d %H:%M:%S')\"" Dockerfile
+            sed -i "/FROM .*/a LABEL tiredofit.image.image_build_date=\"$(date +'%Y-%m-%d %H:%M:%S')\"" Dockerfile
             if [ -f "CHANGELOG.md" ] ; then
               sed -i "/FROM .*/a LABEL tiredofit.moodle.git_changelog_version=\"$(head -n1 ./CHANGELOG.md | awk '{print $2}')\"" Dockerfile
               mkdir -p install/assets/.changelogs ; cp CHANGELOG.md install/assets/.changelogs/${GITHUB_REPOSITORY/\//_}.md
@@ -109,3 +112,6 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ steps.prep.outputs.tags }}
+          build-args: |
+            DISTRO=${{ env.DISTRO }}
+            PHP_BASE=${{ env.PHP_VERSION }}
