--- a/examples/docker-compose.yml
+++ b/examples/docker-compose.yml
@@ -67,8 +67,8 @@ services:
       - DB_NAME=invoiceninja
       - DB_USER=invoiceninja
       - DB_PASS=invoiceninja
-      - DB_DUMP_FREQ=1440
-      - DB_DUMP_BEGIN=0000
+      - DB01_BACKUP_INTERVAL=1440
+      - DB01_BACKUP_BEGIN=0000
       - DB_CLEANUP_TIME=8640
     networks:
       - services
